[package]
name = "wialon-protocol"
version = "0.1.0"
authors = ["kuznetsovin <kuznetsovin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = { version = "0.7", features = ["os-poll", "tcp"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"